# voetbalnl-scraper

./: .gitignore  README.md  pyproject.toml
src/voetbalnl_scraper/: __init__.py  cli.py
