[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voetbalnl-scraper"
version = "0.2.0"
description = "Scrape programma en uitslagen van een Voetbal.nl-team naar ICS of JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Maarten Jongepier" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
voetbalnl-scraper = "voetbalnl_scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voetbalnl_scraper"]
